--- a/options/index.html
+++ b/options/index.html
@@ -3,8 +3,8 @@
   <head>
         <meta charset="utf-8"/>
         <meta name="viewport" id="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0, width=device-width, viewport-fit=cover"/>
-        <link rel="stylesheet" type="text/css" href="options.css"/>
-        <script src="popup.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/style.css"/>
+        <script src="js/main.js"></script>
         <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
   </head>
   <body>
