--- a/popup/index.html
+++ b/popup/index.html
@@ -3,9 +3,9 @@
   <head>
       <meta charset="utf-8"/>
       <meta name="viewport" id="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0, width=device-width, viewport-fit=cover"/>
-      <link rel="stylesheet" type="text/css" href="popup.css"/>
+      <link rel="stylesheet" type="text/css" href="css/style.css"/>
       <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
-      <script src="popup.js"></script>
+      <script src="main/popup.js"></script>
   </head>
   <body>
       <main>
