--- a/src/options/index.html
+++ b/src/options/index.html
@@ -14,7 +14,17 @@
         </center>
       </header>
       <main>
-
+        <div class="set file_name">
+            <label for="file_name">Default File Name</label><br/>
+            <input type="text" id="file_name" placeholder="remote server"/>
+        </div>
+        <div class="set format">
+            <label for="file_format">File Format</label><br/>
+            <select name="file_format" id="file_format" placeholder="Format">
+              <option value="1">CSV</option>
+              <option value="2">Excell</option>
+            </select>
+        </div>
       </main>
       <footer></footer>
   </body>
